tests/snapshots/diagnostics/snapshots/snapshot_diagnostics__snapshots__diagnostics__snapshot_0058_let_annotation_dual_span_full_rendered.snap
---
source: tests/snapshots/diagnostics/mod.rs
expression: output
---
--> compiler error[E300]: TYPE UNIFICATION ERROR

The value of `x` does not match its type annotation.

  --> examples/type_system/failing/106_let_annotation_int_string.flx:2:18
  |
2 |     let x: Int = "hello"
  |                  ^^^^^^^
  |                  ------- this is `String`
  |            --- but `x` was annotated as `Int`

Help:
  Change `x` to a `Int` value or update the annotation to `String`.
